<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="729dp"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ProfilePicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/circular_image_background"
            android:clickable="true"
            android:contentDescription="Profile Picture"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_person_outline_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="User Name"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ProfilePicture" />

        <TextView
            android:id="@+id/UserRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="User Role"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UserName" />

        <TextView
            android:id="@+id/faciliyHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/UserRole"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/UserFacility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:layout_marginStart="28dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/faciliyHeader"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/userOrgEventsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/UserFacility"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <ListView
            android:id="@+id/UserOrgEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            app:layout_constraintTop_toBottomOf="@id/userOrgEventsHeader"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/userInEventsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/UserOrgEvents"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <ListView
            android:id="@+id/UserInEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            app:layout_constraintTop_toBottomOf="@id/userInEventsHeader"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/adminUserDelete"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="48dp"
            android:text="Delete"
            app:layout_constraintTop_toBottomOf="@id/UserInEvents"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/adminUserBack"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="48dp"
            android:text="Back"
            app:layout_constraintTop_toBottomOf="@id/UserInEvents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>