...
            android:layout_centerInParent="true"
            android:background="@drawable/custom_multi_textview"
            android:paddingVertical="4dp"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/browseHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="Browse"
...
        android:id="@+id/adminContentFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <ListView
            android:id="@+id/contentListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </ListView>

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:layout_gravity="end|bottom"/>

    </FrameLayout>
...
