...
    <string name="app_name">My Application</string>
    <string-array name="user_role">
        <item>Entrant</item>
        <item>Organizer</item>
    </string-array>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

</resources>
