<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/editTextFacilityName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:background="#E5E0E8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/editTextFacilityDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Description"
        android:background="#E5E0E8"
        app:layout_constraintTop_toBottomOf="@id/editTextFacilityName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"/>

    <!-- Street EditText -->
    <EditText
        android:id="@+id/editTextStreet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Street"
        android:background="#E5E0E8"
        app:layout_constraintTop_toBottomOf="@id/editTextFacilityDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"/>

    <!-- City EditText -->
    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="City"
        android:background="#E5E0E8"
        app:layout_constraintTop_toBottomOf="@id/editTextStreet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"/>

    <!-- Province EditText -->
    <EditText
        android:id="@+id/editTextProvince"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Province"
        android:background="#E5E0E8"
        app:layout_constraintTop_toBottomOf="@id/editTextCity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/buttonUpdateFacility"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Update Facility"
        app:layout_constraintTop_toBottomOf="@id/editTextProvince"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="32dp"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Cancel"
        app:layout_constraintTop_toBottomOf="@id/buttonUpdateFacility"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
